--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     </head>
     <body>
-        <div class="container bg-dark">
+        <div class="container-fluid">
             <h1>People in the Metro:</h1>
             <h2 id="count-el">0</h2>
             <button id="increment-btn"onclick="increment()">ADD(+1)</button>
